Actualizadas las traducciones

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -349,7 +349,7 @@
     "customer-code": "codice cliente",
     "customer-commission-info": "customer-commission-info",
     "customer-delivery-note": "Customer delivery note",
-    "customer-delivery-notes": "Customer delivery notes",
+    "customer-delivery-notes": "Note di consegna del cliente",
     "customer-estimation": "Estimazione cliente",
     "customer-estimations": "Stime del cliente",
     "customer-group": "Gruppo di clienti",
@@ -480,7 +480,7 @@
     "documents": "Documenti",
     "documents-generated": "documenti-generati",
     "domiciled": "Domiciliato",
-    "done": "done",
+    "done": "completato",
     "done-date": "Data completamento",
     "dont-sell-above-pvp": "Non vendere al di sopra del prezzo al dettaglio",
     "dont-sell-below-cost": "Non vendere sottocosto",
@@ -488,7 +488,7 @@
     "download-completed": "download-completed",
     "download-error": "Errore durante il download. Codice %status% - %error%",
     "download-xml": "Scarica XML",
-    "downloads": "downloads",
+    "downloads": "download",
     "drag": "Trascinare",
     "dto": "Disco.",
     "dto-2": "dto-2",
@@ -1124,7 +1124,7 @@
     "pct-vat": "% IVA",
     "pending": "in attesa",
     "pending-invoices-button": "Fatture in sospeso:",
-    "pending-orders-button": "pending-orders-button",
+    "pending-orders-button": "Pendente di ordini:",
     "pending-reception": "ricezione in sospeso",
     "percentage": "Percentage",
     "percentage-commission": "% Provvigione",
@@ -1137,7 +1137,7 @@
     "phone": "telefono",
     "phone2": "Telefono 2",
     "phones": "Telefoni",
-    "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
+    "php-extension-needed": "È necessaria l'estensione %extension% nella configurazione di PHP",
     "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
     "php-support-end": "php-support-end",
     "physical-stock": "Stock fisico",
@@ -1151,7 +1151,7 @@
     "plugin-file-too-big": "Questo server non consente di caricare file più grandi di %size% MB. Per favore, aumenta la dimensione massima di caricamento dei file in PHP o copia il file nella cartella Plugin.",
     "plugin-installation-disabled": "Installazione di plugin disabilitata su questo server",
     "plugin-installed": "Plugin installato",
-    "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
+    "plugin-need-update": "Il plugin %plugin% richiederà un aggiornamento per funzionare con la nuova versione di FacturaScripts.",
     "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
     "plugin-needed": "Plugin %pluginName% needed.",
     "plugin-needs-fs-version": "plugin-needs-fs-version",
@@ -1209,7 +1209,7 @@
     "projects": "progetti",
     "provider-reference": "Riferimento del fornitore",
     "province": "provincia",
-    "provinces": "provinces",
+    "provinces": "province",
     "public": "Pubblico",
     "public-key": "Chiave pubblica",
     "purchase-rate": "Tasso di acquisto",
@@ -1257,7 +1257,7 @@
     "reference+description": "Reference + Description",
     "refresh": "ricaricare",
     "refresh-page": "Aggiorna pagina",
-    "refund-amount": "Cantidad devuelta",
+    "refund-amount": "Importo rimborsato",
     "refund-payment-concept": "Devolución del recibo %document%",
     "refunds": "refunds",
     "register": "registrare",
@@ -1288,7 +1288,7 @@
     "repeat-password": "Ripeti password",
     "reply": "risposta",
     "report": "report",
-    "report-grouping-account": "Group by account",
+    "report-grouping-account": "Raggruppa per conto",
     "report-non-grouping-account": "Non raggruppare per conto",
     "report-taxes-p": "Questo rapporto consente di ottenere la scomposizione delle imposte sulle fatture di acquisto o di vendita del range selezionato",
     "reports": "Rapporti",
@@ -1602,7 +1602,7 @@
     "using-memcache": "Utilizzando Memcache",
     "valid-for-day": "Válido para un día",
     "validate": "validate",
-    "validate-iban": "Validar IBAN",
+    "validate-iban": "Validare IBAN",
     "valuation-type": "Tipo di valutazione",
     "value": "Valore",
     "value-x": "valore X",
