--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -17,7 +17,7 @@
     "account-code-lower-than-parent": "Kod konta %code% jest krótszy niż rodzica",
     "account-data-missing": "Faltan datos en la cuenta",
     "account-dot-code": "Punto para autocompletar ceros. Ejemplo: 11.1 = 1100000001",
-    "account-length": "Longitud de subcuenta",
+    "account-length": "Długość subkonta",
     "account-length-error": "Longitud de subcuenta errónea. La subcuenta %code% debe tener la longitud definida en el ejercicio.",
     "account-missing-in-balance": "La cuenta %codcuenta% tiene saldo %saldo% pero no está incluida en los balances. Considere incluirla si el balance sale descuadrado.",
     "account-parent-error": "La cuenta padre es incorrecta o no pertenece al ejercicio",
@@ -148,7 +148,7 @@
     "balance-sheets": "Balances",
     "balances": "Balances",
     "bank-account": "Konto bankowe",
-    "bank-accounts": "Cuentas bancarias",
+    "bank-accounts": "Konta bankowe",
     "bank-mandate": "Mandato",
     "bank-mandate-date": "Fecha Mandato",
     "banking-movements": "Movimientos bancarios",
@@ -224,7 +224,7 @@
     "chat": "Chat",
     "check-table": "Error al comprobar la tabla '%tableName%'",
     "check-vies": "Sprawdź VIES",
-    "checked": "Comprobado",
+    "checked": "Zaznaczone",
     "children": "Niño",
     "children-accounts": "Cuentas Hijos",
     "choose-currency": "Elige divisa",
@@ -270,7 +270,7 @@
     "combinations": "Kombinacje",
     "commercial-terms": "Términos comerciales",
     "commission": "Comisión",
-    "commission-general-info": "Relación de porcentajes de comisión que se aplican en la venta de productos. Se aplicará el porcentaje con las condiciones más restrictivas o concretas de las informadas.",
+    "commission-general-info": "Informacje ogólne dotyczące prowizji stosowanej przy sprzedaży produktów. Zastosowany zostanie procent z najbardziej restrykcyjnymi lub konkretnymi warunkami informowanymi.",
     "commission-settlement": "Rozliczenie prowizji %code%",
     "commissions": "Comisiones",
     "common-data": "Dane wspólne",
@@ -344,7 +344,7 @@
     "current-quarter": "Bieżący kwartał",
     "current-risk": "Riesgo actual",
     "customer": "Cliente",
-    "customer-account-not-found": "Subcuenta del cliente no encontrada",
+    "customer-account-not-found": "Nie znaleziono subkonta klienta",
     "customer-banking-accounts": "Cuentas bancarias",
     "customer-code": "Cód. Cliente",
     "customer-commission-info": "Sólo se aplicará cuando la venta sea al cliente seleccionado",
@@ -484,7 +484,7 @@
     "done-date": "Data zakończenia",
     "dont-sell-above-pvp": "No vender por encima de PVP",
     "dont-sell-below-cost": "No vender por debajo de coste",
-    "download": "Descargar",
+    "download": "Pobierz",
     "download-completed": "Descargar completada",
     "download-error": "Błąd podczas pobierania. Kod %status% - %error%",
     "download-xml": "Descargar XML",
@@ -524,7 +524,7 @@
     "enable-updates-beta": "Włącz aktualizacje beta",
     "enabled": "Activo",
     "enabled-plugins": "Wtyczki aktywne",
-    "encrypt": "Encriptación",
+    "encrypt": "Szyfrowanie",
     "end-date": "Data zakończenia",
     "end-time": "Hora finalización",
     "epigraph": "Epígrafe",
@@ -611,13 +611,13 @@
     "file-not-supported": "Archivo no soportado",
     "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
     "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
-    "file-yet-exists": "Ya existe el archivo: %filePath%",
+    "file-yet-exists": "Plik już istnieje: %filePath%",
     "filecache-clear": "Filecache limpiada.",
     "filecache-delete-key-item": "Eliminado elemento '%item%' de Filecache.",
     "filecache-get-key-item": "Pobrany element '%item%' z Filecache.",
     "filecache-set-key-item": "Przypisany element '%item%' do Filecache.",
     "files": "Archivos",
-    "filter-method": "Método del filtro",
+    "filter-method": "Metoda filtracji",
     "filter-records-containing-indicated-value": "Filtrar registros que contienen el valor",
     "filters": "Filtry",
     "finalize": "Finalizar",
@@ -1113,7 +1113,7 @@
     "pay-with-card": "Zapłać kartą",
     "payment": "Pago",
     "payment-date": "Fecha de pago",
-    "payment-days": "Días de pago",
+    "payment-days": "Dni płatności",
     "payment-method": "Metoda płatności",
     "payment-methods": "Formy płatności",
     "payments": "Płatności",
@@ -1237,7 +1237,7 @@
     "readonly": "Tylko do odczytu",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Przebudowa zakończona",
-    "rebuild-stock": "Reconstruir stock",
+    "rebuild-stock": "Odbudować zapas",
     "receipt": "Recibo",
     "receipt-expense-account": "Gastos en el recibo %document%",
     "receipts": "Recibos",
@@ -1248,7 +1248,7 @@
     "record-updated-correctly": "Registro actualizado correctamente.",
     "recreate-system-integrity": "Volver a crear la integridad del sistema",
     "rectified-invoice": "Factura rectificativa",
-    "rectified-invoice-p": "Las facturas son documentos mercantiles y tienen una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utilice este formulario para hacer una devolución sobre esta factura.",
+    "rectified-invoice-p": "Faktury to dokumenty handlowe i podlegają pewnym ograniczeniom prawny. Nie mogą zostać usunięte ani zmodyfikowane. Dozwolone są jedynie zwroty pełne lub częściowe. Skorzystaj z tego formularza, aby dokonać zwrotu tej faktury.",
     "rectified-invoices": "Faktury korygujące",
     "rectifying": "Korekta",
     "rectifying-serie": "Serie rectificativa",
@@ -1288,7 +1288,7 @@
     "repeat-password": "Repetir contraseña",
     "reply": "Respuesta",
     "report": "Raport",
-    "report-grouping-account": "Agrupar por cuentas",
+    "report-grouping-account": "Grupowanie według kont",
     "report-non-grouping-account": "No agrupar por cuentas",
     "report-taxes-p": "Ten raport umożliwia uzyskanie rozliczenia podatków z faktur zakupu lub sprzedaży w wybranym zakresie",
     "reports": "Informes",
@@ -1375,7 +1375,7 @@
     "shop": "Tienda",
     "shops": "Tiendas",
     "short": "Corto",
-    "short-name": "Nombre Corto",
+    "short-name": "Krótka nazwa",
     "show": "Mostrar",
     "show-balance-graphic": "Mostrar gráficos en asientos",
     "show-crm-warnings": "Mostrar avisos CRM",
@@ -1436,7 +1436,7 @@
     "subaccount": "Subcuenta",
     "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
     "subaccount-belongs-other-year": "Konto podrzędne %subAccountCode% należy do innego roku.",
-    "subaccount-irpf": "Cuenta para retenciones",
+    "subaccount-irpf": "Konto dla potrąceń",
     "subaccount-irpf-creditor": "Rachunek IRPF dla zakupów",
     "subaccount-not-found": "Subcuenta %subAccountCode% no encontrada.",
     "subaccount-purchases": "Cuenta para compras",
@@ -1492,7 +1492,7 @@
     "tasks": "Tareas",
     "tasks-completed-title": "Tareas completadas",
     "tasks-component-title": "Tareas",
-    "tasks-personal-title": "Tareas personales",
+    "tasks-personal-title": "Zadania osobiste",
     "tax": "Impuesto",
     "tax-area": "Zona de impuestos",
     "tax-areas": "Obszary podatkowe",
@@ -1638,7 +1638,7 @@
     "website": "Strona internetowa",
     "wednesday": "Miércoles",
     "weeks": "Semanas",
-    "weight": "Peso",
+    "weight": "Waga",
     "which-logs-store": "Qué logs almacenar",
     "width": "Ancho",
     "wildcard": "Comodín",
@@ -1664,7 +1664,7 @@
     "year-wildcard-info": "Año actual (de la fecha actual)",
     "yearly": "Anual",
     "years": "Años",
-    "yes": "Si",
+    "yes": "Tak",
     "yesterday": "Ayer",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
     "you-sent-a-audio": "Enviaste un audio",
