--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -387,7 +387,7 @@
     "dateentry-wildcard-info": "dateentry-wildcard-info",
     "day": "day",
     "days": "dias",
-    "days-log-retention": "Nº días retención logs",
+    "days-log-retention": "Nº dias retenção logs",
     "days-until-expiration": "Dias até o vencimento",
     "db-host": "Servidor de banco de dados",
     "db-name": "Nome do banco de dados",
@@ -471,7 +471,7 @@
     "document-report": "Relatório de documentos",
     "document-sequence": "sequencia-documento",
     "document-sequences": "Sequências de documentos",
-    "document-states": "Document states",
+    "document-states": "Estados do documento",
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo de documento inválido. Deve ter entre 1 e 20 caracteres.",
     "document-wildcard-info": "Documento assinalado na cabeceira do registo contábil",
@@ -971,7 +971,7 @@
     "month-11": "Novembro",
     "month-12": "Dezembro",
     "month-2": "Fevereiro",
-    "month-3": "Marzo",
+    "month-3": "Março",
     "month-4": "Abril",
     "month-5": "Maio",
     "month-6": "Junho",
@@ -1031,7 +1031,7 @@
     "not-allowed-modify": "n",
     "not-enough-stock": "not-enough-stock",
     "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter mais detalhes aqui<\/a>.",
-    "not-public": "No público",
+    "not-public": "Não público",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
     "not-valid-fiscal-number": "Número fiscal inválido",
@@ -1066,7 +1066,7 @@
     "open-tab": "Abrir numa nova aba",
     "opened": "Aberto",
     "opening-acounting-completed": "opening-acounting-completed",
-    "opening-operation": "Apertura",
+    "opening-operation": "Abertura",
     "operation": "Operación",
     "operator": "Operador",
     "option": "Opção",
@@ -1495,7 +1495,7 @@
     "tasks-personal-title": "Tarefas pessoais",
     "tax": "Imposto",
     "tax-area": "Área de impostos",
-    "tax-areas": "tax-areas",
+    "tax-areas": "Áreas de impostos",
     "tax-base": "Tax base",
     "tax-credit-account": "Conta de crédito para impostos",
     "tax-debit-account": "Debit account for taxes",
@@ -1595,7 +1595,7 @@
     "use-gaps": "Usar lacunas",
     "use-holes-invoices-esp": "Se desmarcar o uso de lacunas nas faturas e excluir alguma, permanecerá a lacuna na faturação e você terá problemas com a receita",
     "user": "Do utilizador",
-    "user-and-config": "Usuario y configuración",
+    "user-and-config": "Usuário e configuração",
     "users": "Comercial",
     "using-apc": "Usando cache APC",
     "using-filecache": "Usando o Filecache",
@@ -1650,7 +1650,7 @@
     "without-regularization": "Sem regularização",
     "without-tax": "Sem impostos",
     "without-taxation": "Sem tributação",
-    "wizard": "wizard",
+    "wizard": "Assistente",
     "wizard-p": "wizard-p",
     "wizard-plugins": "O assistente de plugins",
     "work-events": "Eventos de trabalho",
