--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -303,7 +303,7 @@
     "contract": "contract",
     "contracts": "contratos",
     "control-panel": "Painel de controle",
-    "control-panel-decimal-warning": "Advertencia: este cambio se aplicará a los precios de productos, pero también a los totales de facturas, asientos, etc.",
+    "control-panel-decimal-warning": "Aviso: esta alteração será aplicada aos preços dos produtos, mas também aos totais das faturas, lançamentos, etc.",
     "controller": "Controlador",
     "controller-error": "Erro de Controlador",
     "controller-not-found": "Controlador não encontrado",
@@ -471,7 +471,7 @@
     "document-report": "Relatório de documentos",
     "document-sequence": "document-sequence",
     "document-sequences": "document-sequences",
-    "document-states": "Document states",
+    "document-states": "Estados do documento",
     "document-type": "Tipo documento",
     "document-type-valid-length": "Tipo de documento inválido. Deve ter entre 1 e 20 caracteres.",
     "document-wildcard-info": "Documento assinalado na cabeceira do registo contábil",
@@ -626,7 +626,7 @@
     "finished-cron": "Terminou a execução do cron do FacturaScripts, tempo decorrido: %timeNeeded%",
     "first-quarter": "Primer trimestre",
     "first-steps": "f",
-    "first-trimester": "First trimester",
+    "first-trimester": "Primeiro trimestre",
     "fiscal-data": "Dados fiscais",
     "fiscal-exercise": "Exercício fiscal",
     "fiscal-id": "Id.",
@@ -654,11 +654,11 @@
     "friday": "sexta-feira",
     "from": "from",
     "from-accounting-entry": "from-accounting-entry",
-    "from-date": "from-date",
+    "from-date": "da data",
     "from-subaccount": "from-subaccount",
     "full-access": "Acesso completo",
     "full-path": "Caminho completo",
-    "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
+    "gap-found": "Foi encontrado um espaço para o número %numero%, dia %fecha%, %codserie% e empresa %idempresa%",
     "general": "Geral",
     "general-concepts": "Conceitos Gerais",
     "general-data": "Dados gerais",
@@ -799,7 +799,7 @@
     "ip": "IP",
     "ip-banned": "Acesso bloqueado temporariamente a partir do seu IP por motivos de segurança.",
     "irpf": "IRPF",
-    "irpf-record-not-found": "Registro de IRPF %value%% no encontrado.",
+    "irpf-record-not-found": "Registro de IRS %value%% não encontrado.",
     "irpf-subaccount-not-found": "irpf-subaccount-not-found",
     "is-admin": "É administrador",
     "is-creditor": "É credor",
@@ -809,7 +809,7 @@
     "item-limit": "Itens por página",
     "items-added-correctly": "items-added-correctly",
     "items-removed-correctly": "%num% elementos removidos corretamente",
-    "ivarep-subaccount-not-found": "ivarep-subaccount-not-found",
+    "ivarep-subaccount-not-found": "Subconta de IVA repercutido não encontrada",
     "ivasop-account-not-found": "ivasop-account-not-found",
     "january": "Enero",
     "job-name": "Nome do Trabalho",
@@ -1110,7 +1110,7 @@
     "pattern-without-serie": "O padrão escolhido não inclui série, o que pode gerar códigos duplicados para cada série",
     "pattern-without-year": "O padrão escolhido não inclui exercício ou data, pelo que pode gerar códigos duplicados em cada exercício",
     "pay": "pay",
-    "pay-with-card": "pay-with-card",
+    "pay-with-card": "Pagar com cartão",
     "payment": "Pagamento",
     "payment-date": "Data de pagamento",
     "payment-days": "Dias de pagamento",
